Fixed transition from after tapping mail icon. Need to try on mobile

--- a/Portfolio_Website/src/index.css
+++ b/Portfolio_Website/src/index.css
@@ -590,3 +590,14 @@ html {
 .mail-icon-copy.clicked .copy-message {
   display: block;
 }
+
+.mail-icon-copy.clicked .mail-icon {
+  opacity: 0;
+}
+
+.mail-icon-copy.clicked .copy-icon {
+  opacity: 1;
+}
+
+
+
